fix z-index + sorting

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ header {
    height: 74px;
    background-color: #e0e0e0;
    transition: top 0.8s ease, box-shadow 0.25s ease 0s;
+   z-index: 0;
 }
 
 #poll .item.raised {
